Publishing Database Rider 1.0.0-RC3-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -45,7 +45,7 @@ JUnit4 integrates with DBUnit through a https://github.com/junit-team/junit4/wik
 NOTE: The rule just needs a https://docs.oracle.com/javase/tutorial/jdbc/[JDBC^] connection in order to be created.
 
 [discrete]
-=== *Dependencies*
+==== *Dependencies*
 
 To use it add the following maven dependency:
 
@@ -125,7 +125,7 @@ The database should be seeded with the dataset content before test execution ico
 DBUnit CDIfootnote:[http://docs.oracle.com/javaee/6/tutorial/doc/giwhb.html[Contexts and dependency for the Java EE^]] integration is done through a https://docs.jboss.org/weld/reference/latest/en-US/html_single/#interceptors[CDI interceptor^] which reads `@DataSet` to prepare database in CDI tests.
 
 [discrete]
-=== *Dependencies*
+==== *Dependencies*
 
 To use this module just add the following maven dependency:
 
@@ -222,7 +222,7 @@ The database should be seeded with the dataset content before test execution ico
 DBUnit is enabled in JUnit 5 tests through an http://junit.org/junit5/docs/current/user-guide/#extensions[extension^] named *DBUnitExtension*.
 
 [discrete]
-=== *Dependencies*
+==== *Dependencies*
 
 To use the extension just add the following maven dependency:
 
@@ -311,7 +311,7 @@ include::../../../../rider-examples/jpa-productivity-boosters/src/test/java/com/
 IMPORTANT: As cucumber doesn't work with JUnit Rules, see https://github.com/cucumber/cucumber-jvm/issues/393[this issue^], you won't be able to use Cucumber runner with _DBUnit Rule_, but you can use DataSetExecutor in `@Before`, see https://github.com/database-rider/database-rider/tree/master/examples/jpa-productivity-boosters/src/test/java/com/github/database/rider/examples/cucumber/withoutcdi[example here^].
 
 [discrete]
-=== *Dependencies*
+==== *Dependencies*
 Here is a set of maven dependencies needed by Database Rider Cucumber:
 
 NOTE: Most of the dependencies, except CDI container implementation, are brought by Database Rider Cucumber module transitively.
@@ -1180,17 +1180,30 @@ NOTE: *XML, YML, JSON, XLS and CSV* formats are supported.
 include::../../../src/test/java/com/github/database/rider/core/exporter/ExportDataSetIt.java[tags=export-programmatically]
 ----
 
+=== Configuration
+
+Following table shows all exporter configuration options:
+
+[cols="3*", options="header"]
+|===
+|Name | Description | Default
+|format| Exported dataset file format.| YML
+|includeTables| A list of table names to include in exported dataset.| Default is empty which means *ALL tables*.
+|queryList| A list of select statements which the result will used in exported dataset.| {}
+|dependentTables| If true will bring dependent tables of declared includeTables.| false
+|outputName| Name (and path) of output file.| ""
+|===
+
 === Export using DBUnit Addon
 
 https://github.com/database-rider/dbunit-addon[DBUnit Addon^] exports DBUnit datasets based on a database connection.
 
-[discrete]
-=== *Pre requisites*
+.Pre requisites
 
 You need https://forge.jboss.org/download[JBoss Forge^] installed in your IDE or available at command line.
 
-[discrete]
-=== *Installation*
+
+.Installation
 
 Use install addon from git command:
 
@@ -1199,8 +1212,7 @@ addon-install-from-git --url https://github.com/database-rider/dbunit-addon.git
 ----
 
 
-[discrete]
-=== *Usage*
+.Usage
 
 . Setup database connection
 +
@@ -1209,8 +1221,7 @@ image::https://raw.githubusercontent.com/database-rider/dbunit-addon/master/setu
 +
 image::https://raw.githubusercontent.com/database-rider/dbunit-addon/master/export_cmd.png["Export command"]
 
-[discrete]
-=== *Export configuration*
+.Export configuration
 
 * `Format`: Dataset format.
 * `Include tables`: Name of tables to include in generated dataset. If empty all tables will be exported.
