--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,7 @@ image:https://travis-ci.org/database-rider/database-rider.svg[Build Status (Trav
 image:https://coveralls.io/repos/database-rider/database-rider/badge.png[Coverage, link=https://coveralls.io/r/database-rider/database-rider]
 image:https://maven-badges.herokuapp.com/maven-central/com.github.database-rider/rider-core/badge.svg["Maven Central",link="http://search.maven.org/#search|ga|1|database-rider"]
 
-image::rider.png[200,350, float="right", link="https://postimg.org/image/dl2y36aod/"] 
+image::rider.png[200,350, role="right", link="https://postimg.org/image/dl2y36aod/"] 
 
 
 
