--- a/README.adoc
+++ b/README.adoc
@@ -26,8 +26,11 @@ image:https://travis-ci.org/database-rider/database-rider.svg[Build Status (Trav
 image:https://coveralls.io/repos/database-rider/database-rider/badge.png[Coverage, link=https://coveralls.io/r/database-rider/database-rider]
 image:https://maven-badges.herokuapp.com/maven-central/com.github.database-rider/rider-core/badge.svg["Maven Central",link="http://search.maven.org/#search|ga|1|database-rider"]
 
-image::rider.png[200,350, role="right", link="https://postimg.org/image/dl2y36aod/"] 
-
+++++
+<a href="https://s22.postimg.org/t6k9n4mmp/rider_logo.png">
+<img align="right" height="200" width="350" src="https://s18.postimg.org/5yp3yyi3t/rider.png" style="max-width:100%;">
+</a>
+++++
 
 
 This project aims for bringing http://dbunit.sourceforge.net/[DBUnit] closer to your JUnit tests *so database testing will feel like a breeze!*
