--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@
 
 ++++
 <a href="https://s22.postimg.org/t6k9n4mmp/rider_logo.png">
-<img align="right" height="400" width="300" src="https://camo.githubusercontent.com/8572ffb7b746bbebfdf4450feb5a61064cebec23/68747470733a2f2f7331382e706f7374696d672e6f72672f3579703379796933742f72696465722e706e67" style="max-width:100%;">
+<img align="right" height="400" width="300" src="https://github.com/database-rider/database-rider/raw/gh-pages/images/rider_orochi.png" style="max-width:100%;">
 </a>
 ++++
 
