fix getting started url

--- a/README.adoc
+++ b/README.adoc
@@ -154,7 +154,7 @@ NOTE: <<EntityManagerProvider>> is a simple JUnit rule that creates a JPA entity
 
 == Documentation
 
-A getting started guide can be found here http://database-rider.github.io/getting-started/getting-started.html.
+A getting started guide can be found here http://database-rider.github.io/getting-started/.
 
 For main features overview see http://database-rider.github.io/database-rider/latest/documentation.html[project living documentation^].
 
