Publishing Database Rider 1.0.0 living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,12 +10,12 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.0.1-SNAPSHOT
+:revnumber: 1.0.0
 :hardbreaks:
 
 = *Living Documentation*
 
-include::/home/travis/build/database-rider/database-rider/rider-core/target/test-classes/cukedoctor-intro.adoc[leveloffset=+1]
+include::/home/pestano/projects/database-rider/rider-core/target/test-classes/cukedoctor-intro.adoc[leveloffset=+1]
 
 
 [[Seeding-database, Seeding database]]
