--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,7 +10,7 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.0.1-SNAPSHOT
+:revnumber: 1.1.0
 :hardbreaks:
 
 = *Living Documentation*
