Publishing Database Rider 1.2.0-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,7 +10,7 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.1.0
+:revnumber: 1.2.0-SNAPSHOT
 :hardbreaks:
 
 = *Living Documentation*
