Publishing Database Rider 1.2.0 living documentation.

--- a/1.2.0/documentation.adoc
+++ b/1.2.0/documentation.adoc
@@ -1150,7 +1150,7 @@ TIP: Complete source code of example below can be https://github.com/database-ri
 
 [source,java,indent=0]
 ----
-include::../../../src/test/java/com/github/database/rider/core/LeakHunterIt.java[tags=leak-hunter-declare;find-leak;ceate-leak]
+include::../../../src/test/java/com/github/database/rider/core/LeakHunterIt.java[tags=leak-hunter-declare;find-leak;create-leak]
 ----
 <1> Enables connection leak detection.
 
