--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,7 +10,7 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.2.2
+:revnumber: 1.2.3-SNAPSHOT
 :hardbreaks:
 
 = *Living Documentation*
