--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -12,7 +12,8 @@ Below is an overview of what has changed on each `Database Rider` version.
 == https://github.com/database-rider/database-rider/releases/tag/1.2.3[1.2.3 (2017-20-10)^]
 
 Bug fixes::
-    * Changes the way https://database-rider.github.io/database-rider/1.2.3/documentation.html#Dynamic-data-using-scritable-datasets[dynamic datasets^] script replacements are done. Instead of using a https://www.programcreek.com/java-api-examples/index.php?api=org.dbunit.dataset.ReplacementDataSet[ReplacementDataSet^] We have created our own "ScriptableDataSet". The main problem with Replacements is that if a replace pattern is repeated in a dataset the replacement will be the same for all matches.
+    * Changes the way https://database-rider.github.io/database-rider/1.2.3/documentation.html#Dynamic-data-using-scritable-datasets[dynamic datasets^] script replacements are done. Instead of using a https://www.programcreek.com/java-api-examples/index.php?api=org.dbunit.dataset.ReplacementDataSet[ReplacementDataSet^] We have created our own "ScriptableDataSet".
+The main problem with Replacements is that if a replace pattern is repeated in a dataset the replacement will be the same for all matches. (https://github.com/database-rider/database-rider/issues/46[#46])
 
 == https://github.com/database-rider/database-rider/releases/tag/1.2.2[1.2.2 (2017-02-10)^]
 
