--- a/1.2.6-SNAPSHOT/documentation.adoc
+++ b/1.2.6-SNAPSHOT/documentation.adoc
@@ -171,6 +171,8 @@ Your test itself must be a CDI bean to be intercepted. if you’re using https:/
 
 deltaspike.testcontrol.use_test_class_as_cdi_bean=true
 ----
+
+IMPORTANT: When using above configuration the JUnit `@Before` will not work as expected, see https://lists.apache.org/thread.html/60ae2ade9ff8c5588a53a138b64c94e505455185358c21f663a5fd33@%3Cusers.deltaspike.apache.org%3E[discussion here^].
 ======
 
 =====
