--- a/1.2.10-SNAPSHOT/documentation.adoc
+++ b/1.2.10-SNAPSHOT/documentation.adoc
@@ -1246,3 +1246,101 @@ image::https://raw.githubusercontent.com/database-rider/dbunit-addon/master/expo
 * `Output dir`: directory to generate dataset.
 * `Name`: name of resulting dataset. Format can be ommited in dataset name.
 
+[[MetaDataSet, MetaDataSet]]
+== *MetaDataSet*
+
+****
+====
+[quote]
+____
+In order to reuse datasets
+As a developer
+I want to create a custom annotation which holds my dataset and use it among tests.
+____
+====
+
+TIP: Complete source code of examples below can be https://github.com/database-rider/database-rider/blob/master/rider-core/src/test/java/com/github/database/rider/core/MetaDataSetIt.java#L21[found here^].
+
+TIP: See https://github.com/database-rider/database-rider/blob/master/rider-spring/src/test/java/com/github/database/rider/spring/dataset/MetaDataSetIT.java[Rider Spring^], https://github.com/database-rider/database-rider/blob/master/rider-junit5/src/test/java/com/github/database/rider/junit5/MetaDataSetIt.java[JUnit5^] and https://github.com/database-rider/database-rider/blob/master/rider-cdi/src/test/java/com/github/database/rider/cdi/MetaDataSetIt.java[CDI^] examples.
+****
+
+=== Class level metadataset
+
+****
+Given ::
+=====
+The following metataset annotation icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.MetaDataSet.java
+----
+include::../../../src/test/java/com/github/database/rider/core/api/dataset/MetaDataSet.java[]
+----
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/MetaDataSetIt.java[tags=declaration;class-level]
+}
+----
+
+
+******
+
+=====
+Then ::
+=====
+Test must use dataset declared in `MetaDataSet` annotation. icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+=== Method level metadaset
+
+****
+Given ::
+=====
+The following metataset annotation icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.MetaDataSet.java
+----
+include::../../../src/test/java/com/github/database/rider/core/api/dataset/AnotherMetaDataSet.java[]
+----
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/MetaDataSetIt.java[tags=declaration;method-level]
+}
+----
+
+
+******
+
+=====
+Then ::
+=====
+Test must use dataset declared in `AnotherMetaDataSet` annotation. icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
